src/snapshots/rv__resolver__tests__multi-repo-combination-no-suggests.txt.snap
---
source: src/resolver.rs
expression: out
---
slurmtools=0.1.2 (from http://a2-ai-universe, type=source, from_lockfile=false, path='')
brio=1.1.5 (from http://P3M, type=binary, from_lockfile=false, path='')
dplyr=1.1.4 (from http://P3M, type=binary, from_lockfile=false, path='')
fs=1.6.5 (from http://P3M, type=binary, from_lockfile=false, path='')
glue=1.8.0 (from http://P3M, type=binary, from_lockfile=false, path='')
jsonlite=1.8.9 (from http://P3M, type=binary, from_lockfile=false, path='')
processx=3.8.4 (from http://P3M, type=binary, from_lockfile=false, path='')
purrr=1.0.2 (from http://P3M, type=binary, from_lockfile=false, path='')
rlang=1.1.4 (from http://P3M, type=binary, from_lockfile=false, path='')
tibble=3.2.1 (from http://P3M, type=binary, from_lockfile=false, path='')
whisker=0.4.1 (from http://P3M, type=binary, from_lockfile=false, path='')
withr=3.0.2 (from http://P3M, type=binary, from_lockfile=false, path='')
here=1.0.1 (from http://P3M, type=binary, from_lockfile=false, path='')
cli=3.6.3 (from http://P3M, type=binary, from_lockfile=false, path='')
stringi=1.8.4 (from http://P3M, type=binary, from_lockfile=false, path='')
hms=1.1.3 (from http://P3M, type=binary, from_lockfile=false, path='')
lifecycle=1.0.4 (from http://P3M, type=binary, from_lockfile=false, path='')
generics=0.1.3 (from http://P3M, type=binary, from_lockfile=false, path='')
magrittr=2.0.3 (from http://P3M, type=binary, from_lockfile=false, path='')
pillar=1.9.0 (from http://P3M, type=binary, from_lockfile=false, path='')
R6=2.5.1 (from http://P3M, type=binary, from_lockfile=false, path='')
tidyselect=1.2.1 (from http://P3M, type=binary, from_lockfile=false, path='')
vctrs=0.6.5 (from http://P3M, type=binary, from_lockfile=false, path='')
ps=1.8.1 (from http://P3M, type=binary, from_lockfile=false, path='')
fansi=1.0.6 (from http://P3M, type=binary, from_lockfile=false, path='')
pkgconfig=2.0.3 (from http://P3M, type=binary, from_lockfile=false, path='')
rprojroot=2.0.4 (from http://P3M, type=binary, from_lockfile=false, path='')
utf8=1.2.4 (from http://P3M, type=binary, from_lockfile=false, path='')
